--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Ocearo",
-  "short_name": "Ocearo",
+  "name": "OnWatch",
+  "short_name": "OnWatch",
   "description": "Sailing made smarter",
   "scope": ".",
   "start_url": ".",
